--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,4 +2,18 @@
 {% load static %}
 
 {% block content %}
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 text-black">Welcome To Vinyl House</h1>
+            <h3 class="display-6 text-black">Ireland's Top Record Shop</h3>
+            <div class="my-5">
+                <h4>
+                    <a href="" class="btn btn-lg rounded-0 text-uppercase py-3">All Records</a>
+                    <a href="" class="btn btn-lg rounded-0 text-uppercase py-3">Offers</a>
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
